# CPPFight

./: CMakeLists.txt  README.md
assets/: P.pixil
resources/Enemies/: Enemies.txt
resources/Sprites/: C.pixil  action_button.pixil  attack_box.pixil  cursor.pixil  encounter_background.pixil  fight_button.pixil  menu_background.pixil  play_button.pixil  play_button_selected.pixil  quit_button.pixil  quit_button_selected.pixil  rules_background.pixil  rules_button.pixil  rules_button_selected.pixil
src/: CMakeLists.txt
src/Include/: Action.h  ActionButton.h  ActionData.h  Baby.h  Button.h  Clickable.h  Configs.h  Context.h  Damageable.h  Dialogue.h  Encounter.h  EncounterActing.h  EncounterFighting.h  EncounterIdle.h  EncounterMonsterTurn.h  EncounterState.h  Enemy.h  EnemyData.h  EnemyLoader.h  FightButton.h  FilePaths.h  Game.h  Game.hpp  GameRun.h  GroupTarget.hpp  IDamageable.h  IDrawable.h  Main.h  Menu.h  MouseData.h  Player.h  RoundTarget.hpp  Shaker.h  SpecificActionButton.h  SquareTarget.hpp  Target.hpp  TextBox.h
src/Source/: ActionButton.cpp  Baby.cpp  Button.cpp  Clickable.cpp  Damageable.cpp  Dialogue.cpp  Encounter.cpp  EncounterActing.cpp  EncounterFighting.cpp  EncounterIdle.cpp  EncounterMonsterTurn.cpp  Enemy.cpp  EnemyLoader.cpp  FightButton.cpp  Game.cpp  GameRun.cpp  GroupTarget.cpp  IDrawable.cpp  Main.cpp  Menu.cpp  MouseData.cpp  Player.cpp  RoundTarget.cpp  Shaker.cpp  SquareTarget.cpp  Target.cpp  TextBox.cpp
tests/: CMakeLists.txt  EnemyLoaderIntegrityTest.cpp  EnemyLoaderTests.cpp  GlobalTests.cpp  RoundTargetTest.cpp
